drying to fix h1 resize glitch on mobile

--- a/public/css/home/main.css
+++ b/public/css/home/main.css
@@ -33,7 +33,6 @@
 #about-us-text h1 {
   font-family: 'Josefin Sans', 'Raleway', Arial;
   font-weight: 200;
-  text-transform: uppercase;
 }
 
 #about-us-text-left, #about-us-text-right {
